***	Version 1.9	(Jérôme Combes, 21 janvier 2015)		***
- Améliorations :
Planning : Ajoute les boutons "Supprimer tout" et "Barrer tout" dans le menu permettant de modifier les cellules

- Corrections :
Tableaux : Améliore l'affiche de la page de configuration les horaires
Absences : Contrôle si l'absence posée ou modifiée concerne des plannings validés
Agenda : Affiche toutes les absences dans les agendas


***	Version 1.8.9	(Jérôme Combes, 13 janvier 2015)		***
- Correction :
Planning : Utilise GET et POST pour transmettre les variables date et site entre les différentes pages de gestion des plannings
au lieu d'utiliser les sessions qui étaient problématiques lors de l'utilisation de plusieurs fenêtres

***	Version 1.8.8	(Jérôme Combes, 18 décembre 2014)		***
- Améliorations :
Absences - notifications : Permet la saisie de plusieurs responsables directs dans la fiche des agents
Absences - notifications : Cases à cocher permettant de choisir les destinataires des notifications dans la config.
  Ceci offre plus de possibilités pour choisir les destinataires
LDAP : connexion au serveur LDAP en anonyme possible (laisser les champs RDN et Password vides).


***	Version 1.8.7	(Jérôme Combes, 8 décembre 2014)		***
- Améliorations :
Planning : Possibilité de ne pas afficher les lignes vides dans les plannings validés (config Planning-lignesVides)

- Corrections :
Planning : Corrige l'erreur retournée lorsqu'une cellule est vidée (erreur générée en 1.8.6)


***	Version 1.8.6	(Jérôme Combes, 5 décembre 2014)		***
- Améliorations :
Planning : Possibilité de mettre jusqu'à 20 agents par cellule.
Absences : Cases à cocher pour les pièces justificatives
Absences : Suppression de la page de confirmation lors de l'ajout d'une absence
Fiches Agents : Amélioration de l'affichage des droits d'accès

JS : Fonction file() remplacée par $.ajax()
Réorganisation des dossiers js et themes, création d'un dossier vendor
Mise à jour des bibliothèques JQuery, JQuery-ui, DataDatble